# forex-trading-ai

./: .env.example  .env.live.example  .gitignore  APP-CREATION-PLANNING.md  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: deploy-dashboard.yml
config/: plugins.yaml
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/public/: CNAME
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: AccountFilter.tsx  Controls.tsx  Dashboard.tsx  DataQuality.tsx  EngineHealth.tsx  Engines.tsx  Login.tsx  OpenTrades.tsx  PausedBanner.tsx  Readiness.tsx  SetPassword.tsx  SignalsFeed.tsx  StatTiles.tsx  StrategyLab.tsx  (+2 more)
docs/: architecture.md  dashboard.md  engine.md  going-live.md  plugin-system.md  research-log.md  safety-rails.md  strategy-lab.md
engine/: config.py  evaluator.py  gating.py  indicators.py  loop.py  registry.py  reporting.py  sizing.py  stats.py  supabase_client.py
engine/core/: models.py
infra/: run-live-engine.ps1  setup-live-engine-task.ps1  setup-scheduled-tasks.ps1  vps-bootstrap.ps1  vps-setup.md  watchdog.ps1
scripts/: backtest.py  backtest_ema_trend_v1.py  diagnose_costs.py  list_symbols.py  run_engine.py  smoke_test_registry.py
supabase/migrations/: 0001_phase1_market_data.sql  0002_phase2_signals.sql  0003_phase3_trades.sql  0004_phase3_signal_risk_columns.sql  0005_phase4_dashboard_rls.sql  0006_phase5_ai_reviews.sql  0007_authenticated_read_monitoring.sql  0008_require_login_for_monitoring.sql  0009_strategy_lab.sql  0010_live_account.sql  0011_per_strategy_risk.sql  0012_test_trade_command.sql  0013_repair_cross_account_reconcile.sql  0014_trades_signal_id.sql
(+40 files in other folders)
